# EDAagent

./: .dockerignore  .gitignore  .replit  Dockerfile  LICENSE  Procfile  README.md  SETUP_WINDOWS.md  deploy.bat  deploy.sh  docker-compose.yml  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
data/: .gitkeep
frontend/static/plots/: .gitkeep
frontend/templates/: 404.html  home.html
server/: .env  __init__.py  app.py  database.py  eda_agent.db  optimize_images.py  utils.py
server/templates/: 500.html  analysis.html  base.html  chat.html  history.html  home.html
server/uploads/: health_fitness_dataset.csv
tests/: test_app.py
