[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "edaagent"
version = "0.1.0"
description = "EDA Agent for data analysis and visualization"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
flask = {version = "^3.0.2", extras = ["async"]}
werkzeug = "^3.0.1"
jinja2 = "^3.1.3"
pandas = "^2.2.1"
numpy = "^1.26.4"
openpyxl = "^3.1.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
openrouter = "^0.1.0"
bleach = "^6.2.0"
gunicorn = "^21.2.0"
